# rag

./: .crush.json  .dockerignore  .gitignore  Dockerfile  MODEL_SELECTION.md  Makefile  Modelfile  README.md  WARP.md  main.py  markdown.md  pyproject.toml  pyrightconfig.json  renovate.json  rust-migration-plan.md  setup.cfg
.claude/: settings.local.json
.continue/mcpServers/: serena.yaml
.github/workflows/: codeql-analysis.yml  docker.yml
.qwen/: settings.json
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_change.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
examples/: I Convinced HP's Board to Buy Palm.md  cleaning_example.md  messy_document.md
libs/: __init__.py  args.py  chat.py  chat_storage.py  cleaning.py  database.py  document_loader.py  embedding.py  list_models.py  models.py  models_gemini.py  openwebui.py  rag_orchestrator.py  s3.py  search.py  search_orchestrator.py  utils.py  validation.py  web.py  wisdom.py
libs/cache/: __init__.py  llm_cache.py
libs/commands/chat/: chat.py
libs/commands/data_fill/: cleaning.py  collection.py  data.py  documents.py  embedding.py  openwebui.py  s3.py  utils.py  validation.py  wisdom.py
libs/commands/search/: search.py
libs/commands/web/: web.py
web/: .gitignore  package.json  tsconfig.json
web/public/: index.html
web/src/: App.tsx  index.tsx  reportWebVitals.ts
web/src/components/: ChatInterface.tsx  ChatMessage.tsx  ChatWindow.tsx
web/src/services/: websocket.ts
(+7 files in other folders)
