[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "firecrawl-py>=2.16.1",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "markdownify>=1.1.0",
    "nltk>=3.9.1",
    "ollama>=0.5.1",
    "openai>=1.97.0",
    "rich>=14.0.0",
    "textual>=0.55.0",
    "tiktoken>=0.7.0",
    "unstructured[md]>=0.18.9",
]
